--- a/225-project.ipynb
+++ b/225-project.ipynb
@@ -37,11 +37,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Research Question\n",
+    "### Research Question and Motivation\n",
     "\n",
     "**Can regime-aware modeling improve risk assessment and portfolio allocation?**\n",
     "\n",
-    "We investigate whether explicitly identifying high- and low-volatility regimes (via Markov switching) leads to better understanding of tail risk and portfolio performance compared to unconditional approaches.\n",
+    "**Why this is interesting:**\n",
+    "- Financial markets exhibit time-varying volatility with distinct \"calm\" and \"turbulent\" regimes\n",
+    "- Traditional risk measures (e.g., unconditional VaR) may underestimate risk during regime transitions\n",
+    "- Portfolio strategies that adapt to volatility regimes could improve risk-adjusted returns\n",
+    "- Sector-level tail risk varies substantially, suggesting diversification benefits\n",
+    "\n",
+    "We investigate whether explicitly identifying high- and low-volatility regimes (via Markov switching) leads to:\n",
+    "1. Better understanding of tail risk (VaR/ES) across sectors\n",
+    "2. Improved portfolio allocation decisions (comparing equal-weight, inverse-volatility, and minimum-variance strategies)\n",
+    "3. More accurate risk assessment during regime transitions\n",
     "\n"
    ]
   },
